<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022-2024 Paranoid Android

     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/glyph_settings_flip_toggle_title">

    <org.nukisystems.hieroglyph.Preference.MatrixPreference
        android:key="glyph_settings_flip_sub_preview"
        android:selectable="false" />

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="glyph_settings_flip_sub_toggle"
        android:title="@string/glyph_settings_flip_toggle_title" />

        <ListPreference
            android:key="glyph_settings_flip_sub_animations"
            android:icon="@drawable/ic_animation"
            android:title="@string/glyph_settings_flip_sub_animations_title"
            android:layout="@layout/preference"
            android:summary="%s" />

        <Preference
            android:key="glyph_settings_flip_sub_live_preview"
            android:icon="@drawable/ic_live"
            android:title="@string/glyph_settings_animations_live_preview_title"
            android:summary="@string/glyph_settings_animations_live_preview_summary" />

        <SwitchPreferenceCompat
            android:key="glyph_settings_flip_sub_animation_toggle"
            android:icon="@drawable/ic_play"
            android:title="@string/glyph_settings_flip_sub_animation_toggle_title"
            android:defaultValue="true"
            android:summary="@string/glyph_settings_flip_sub_animation_toggle_summary" />

        <SwitchPreferenceCompat
            android:key="glyph_settings_flip_sub_animations_reverse_toggle"
            android:title="@string/glyph_settings_sub_animations_reverse_toggle_title"
            android:icon="@drawable/ic_rewind"
            android:defaultValue="false"
            android:summary="@string/glyph_settings_sub_animations_reverse_toggle_summary" />

    <PreferenceCategory />

        <ListPreference
            android:key="glyph_settings_flip_sub_ringer_mode"
            android:icon="@drawable/ic_notification_settings"
            android:title="@string/glyph_settings_flip_ringer_mode_title"
            android:summary="%s"
            android:entries="@array/glyph_flip_ringer_mode_entries"
            android:entryValues="@array/glyph_flip_ringer_mode_values"
            android:defaultValue="-1" />

        <com.android.settingslib.PrimarySwitchPreference
            android:key="glyph_settings_always_on_toy"
            android:icon="@drawable/ic_joystick"
            android:title="@string/glyph_settings_always_on_toy_title"
            android:summary="@string/glyph_settings_toy_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="org.nukisystems.hieroglyph"
                android:targetClass="org.nukisystems.hieroglyph.Settings.SubSettingsActivity">
                <extra android:name="fragment" android:value=".Settings.Toy.AodToySettingsFragment" />
            </intent>
        </com.android.settingslib.PrimarySwitchPreference>


</PreferenceScreen>
